--- a/.env
+++ b/.env
@@ -15,3 +15,11 @@ APP_SECRET=fca908db8bcef401f059a073c68730bd
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://jason.vinod@techjini.com:Crystal@123@localhost
+###< symfony/swiftmailer-bundle ###
+
