--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "^4.1",
-        "symfony/yaml": "^4.1"
+        "symfony/yaml": "^4.1",
+        "true/punycode": "^2.1"
     },
     "require-dev": {
         "symfony/dotenv": "^4.1",
