--- a/.env
+++ b/.env
@@ -20,6 +20,6 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/skillsfarm
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=gmail://jason.vinod@techjini.com:Crystal@123@localhost
+MAILER_URL=gmail://skillsfarmindia@gmail.com:skillsfarm@123@localhost
 ###< symfony/swiftmailer-bundle ###
 
