--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "^4.1",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
@@ -15,6 +16,7 @@
         "symfony/security-bundle": "^4.1",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "^4.1",
+        "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1",
         "true/punycode": "^2.1"
     },
