--- a/.env
+++ b/.env
@@ -23,3 +23,8 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/skillsfarm
 MAILER_URL=gmail://skillsfarmindia@gmail.com:skillsfarm@123@localhost
 ###< symfony/swiftmailer-bundle ###
 
+
+###> aws/aws-sdk-php-symfony ###
+AWS_KEY=not-a-real-key
+AWS_SECRET=@@not-a-real-secret
+###< aws/aws-sdk-php-symfony ###
