--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -64,7 +64,7 @@ security:
   access_control:
   - { path: ^/jobseeker/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
   - { path: ^/employer/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-  - { path: ^/employer/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+  - { path: ^/employer/home, roles: IS_AUTHENTICATED_ANONYMOUSLY }
   - { path: ^/jobseeker/signup, roles: IS_AUTHENTICATED_ANONYMOUSLY }
   - { path: ^/jobseeker, roles: ROLE_JOBSEEKER }
   - { path: ^/employer, roles: ROLE_EMPLOYER }
