--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -65,6 +65,7 @@ security:
   - { path: ^/jobseeker/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
   - { path: ^/employer/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
   - { path: ^/employer/home, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+  - { path: ^/employer/pricing, roles: IS_AUTHENTICATED_ANONYMOUSLY }
   - { path: ^/jobseeker/signup, roles: IS_AUTHENTICATED_ANONYMOUSLY }
   - { path: ^/jobseeker, roles: ROLE_JOBSEEKER }
   - { path: ^/employer, roles: ROLE_EMPLOYER }
